<resources>
    <string name="app_name">The Pizza Restaurant</string>
    <string name="add_to_order_message">Pizza added to your Cart</string>
    <string name="invalid_phone_number">Invalid Phone Number</string>
    <string name="store_order_removed_message">Store Order Removed</string>
    <string name="blah_blah">Order Placed</string>
    <string name="removed_from_cart_message">Pizza Removed from Cart</string>
    <string name="phoneNum">Current Phone Number</string>
    <string name="modify_pizza_label">Customize Your Pizza</string>
    <string name="phoneNum_hint">Enter Phone Number</string>
    <string name="phoneNum_button_label">Enter</string>
    <string name="hawaiian_button_label">Order Hawaiian</string>
    <string name="deluxe_button_label">Order Deluxe</string>
    <string name="pepperoni_button_label">Order Pepperoni</string>
    <string name="currOrder_button_label">Current Order</string>
    <string name="storeOrder_button_label">Store Order</string>
    <string name="pizza_logo_label">Pizza logo</string>
    <string name="remove_order_label">Remove Order</string>
    <string name="store_order_label">Current Store Orders</string>
    <string name="current_order_label">Current Order</string>
    <string name="cart_label">Your Cart:</string>
    <string name="subtotal_label">SubTotal $:</string>
    <string name="subtotal_label2">SubTotal</string>
    <string name="tax_label">Tax $:</string>
    <string name="tax_label2">Tax</string>
    <string name="finalTotal_label">Final Total $:</string>
    <string name="finalTotal_label2">Final Total</string>
    <string name="removeItem_button_label">Remove Pizza</string>
    <string name="placeOrder_button_label">Place Order</string>
    <string name="customize_label">Customize Your Pizza</string>
    <string name="selectSize_label">Select Size:</string>
    <string name="availableToppings_label">Available Toppings To Add:</string>
    <string name="addedToppings_label">Your Selected Toppings:</string>
    <string name="addTopping_button_label">Add Topping</string>
    <string name="removeTopping_button_label">Remove Topping</string>
    <string name="addToOrder_button_label">Add To Order</string>
    <string name="total_label">Total $:</string>
    <string name="total_label2">Total</string>
</resources>