<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <ImageView
            android:layout_width="118dp"
            android:layout_height="113dp" app:srcCompat="@drawable/pizza_logo" android:id="@+id/imageView"
            android:layout_marginEnd="147dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" android:contentDescription="@string/pizza_logo_label"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="66dp"
        android:layout_height="32dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="136dp"
        android:text="@string/cart_label"
        android:inputType="none"
        android:enabled="false"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
            android:layout_width="372dp"
            android:layout_height="254dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:layout_marginEnd="23dp" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/listOfPizzaView"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:ems="10"
            android:id="@+id/subTotalText"
            android:enabled="false"
            android:textColor="@color/black"
            android:layout_marginEnd="20dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
            android:autofillHints="@string/subtotal_label2" android:hint="@string/subtotal_label2"/>

    <TextView
            android:text="@string/subtotal_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView7"
            android:inputType="none"
            android:enabled="false"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="186dp"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="none"
            android:enabled="false"
            android:textColor="@color/black"
            android:id="@+id/taxText"
            android:layout_marginEnd="20dp" app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints="@string/tax_label2" android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@+id/subTotalText" android:hint="@string/tax_label2"/>

    <TextView
            android:text="@string/tax_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView8"
            android:inputType="none"
            android:enabled="false"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/textView7"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="none"
            android:enabled="false"
            android:textColor="@color/black"
            android:id="@+id/finalAmountText"
            android:layout_marginEnd="20dp" app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints="@string/finalTotal_label2"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView9" android:hint="@string/finalTotal_label2"/>

    <TextView
            android:text="@string/finalTotal_label"
            android:layout_width="wrap_content"
            android:inputType="none"
            android:enabled="false"
            android:textColor="@color/black"
            android:layout_height="wrap_content" android:id="@+id/textView9"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="14dp"
            android:layout_marginTop="25dp" app:layout_constraintTop_toBottomOf="@+id/textView8"/>

    <Button
        android:id="@+id/addOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="16dp"
        android:text="@string/placeOrder_button_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
