<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <EditText
        android:id="@+id/phoneNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:autofillHints="@string/phoneNum_hint"
        android:ems="10"
        android:hint="@string/phoneNum_hint"
        android:inputType="textPersonName|phone"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.217"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/phoneNumButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="16dp"
        android:onClick="getPhoneNumber"
        android:text="@string/phoneNum_button_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/phoneNum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/phoneNum"
        />

    <Button
        android:id="@+id/currentOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:onClick="currentOrder"
        android:text="@string/currOrder_button_label"
        app:layout_constraintBottom_toTopOf="@+id/storeOrderButton"
        app:layout_constraintEnd_toEndOf="parent"
         />

    <Button
        android:id="@+id/storeOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="213dp"
        android:onClick="storeOrders"
        android:text="@string/storeOrder_button_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
         />
    <ImageView
            android:layout_width="118dp"
            android:layout_height="113dp" app:srcCompat="@drawable/pizza_logo" android:id="@+id/imageView"
            android:layout_marginEnd="147dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" android:contentDescription="@string/pizza_logo_label"/>

    <ImageButton
        android:id="@+id/deluxeButton"
        android:layout_width="200dp"
        android:layout_height="125dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="186dp"
        android:contentDescription="@string/deluxe_button_label"
        android:onClick="modifyPizza1"
        app:layout_constraintBottom_toTopOf="@+id/pepperoniButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNum"
        app:srcCompat="@drawable/deluxe_pizza" />

    <ImageButton
        android:id="@+id/pepperoniButton"
        android:layout_width="200dp"
        android:layout_height="125dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="227dp"
        android:contentDescription="@string/pepperoni_button_label"
        android:onClick="modifyPizza2"
        android:src="@drawable/pepperoni_pizza1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/currentOrderButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deluxeButton" />

    <ImageButton
        android:id="@+id/hawaiianButton"
        android:layout_width="200dp"
        android:layout_height="125dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="192dp"
        android:layout_marginBottom="57dp"
        android:contentDescription="@string/hawaiian_button_label"
        android:onClick="modifyPizza3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pepperoniButton"
        app:srcCompat="@drawable/hawaiian_pizza"
        tools:ignore="ImageContrastCheck,ImageContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>

