<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="138dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="137dp"
        android:layout_marginBottom="13dp"
        android:text="@string/customize_label"
        app:layout_constraintBottom_toTopOf="@+id/sizeSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="none"
        android:enabled="false"
        android:textColor="@color/black"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="73dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="97dp"
        android:text="@string/selectSize_label"
        app:layout_constraintBottom_toTopOf="@+id/availableToppingsListView"
        app:layout_constraintEnd_toStartOf="@+id/sizeSpinner"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="none"
        android:enabled="false"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/sizeSpinner"
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="177dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="44dp"
        android:text="@string/availableToppings_label"
        app:layout_constraintBottom_toTopOf="@+id/availableToppingsListView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="none"
        android:enabled="false"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/sizeSpinner" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="175dp"
        android:layout_height="34dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="20dp"
        android:text="@string/addedToppings_label"
        app:layout_constraintBottom_toTopOf="@+id/selectedToppingsListView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="none"
        android:enabled="false"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/availableToppingsListView" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="156dp"
        android:text="@string/total_label"
        app:layout_constraintBottom_toBottomOf="parent"
        android:inputType="none"
        android:enabled="false"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/currPizzaPriceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="28dp"
        android:autofillHints="@string/total_label2"
        android:ems="10"
        android:hint="@string/total_label2"
        android:inputType="none"
        android:labelFor="@id/textView11"
        app:layout_constraintBottom_toTopOf="@+id/addPizzaToOrderButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/_dynamic"
        android:enabled="false"
        android:textColor="@color/black"
        tools:ignore="UnknownId" />

    <Button
        android:id="@+id/addPizzaToOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="48dp"
        android:text="@string/addToOrder_button_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/availableToppingsListView"
        android:layout_width="391dp"
        android:layout_height="110dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <ListView
        android:id="@+id/selectedToppingsListView"
        android:layout_width="388dp"
        android:layout_height="114dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="43dp"
        app:layout_constraintBottom_toTopOf="@+id/currPizzaPriceText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />
</androidx.constraintlayout.widget.ConstraintLayout>